--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,13 @@ dependencies {
 	implementation "com.google.code.gson:gson:+"
 	implementation "it.unimi.dsi:fastutil:+"
 	implementation "org.msgpack:msgpack-core:+"
+	implementation "org.eclipse.jetty:jetty-http:9.+"
+	implementation "org.eclipse.jetty:jetty-io:9.+"
+	implementation "org.eclipse.jetty:jetty-security:9.+"
+	implementation "org.eclipse.jetty:jetty-server:9.+"
+	implementation "org.eclipse.jetty:jetty-servlet:9.+"
+	implementation "org.eclipse.jetty:jetty-util:9.+"
+	implementation "org.eclipse.jetty:jetty-util-ajax:9.+"
 }
 
 jar {
