--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ dependencies {
 	implementation "com.corundumstudio.socketio:netty-socketio:+"
 	implementation "org.msgpack:msgpack-core:+"
 	implementation "com.github.jonafanho:Socket-IO-Webserver:master-SNAPSHOT"
+	testImplementation "org.junit.jupiter:junit-jupiter-api:+"
+	testImplementation "commons-io:commons-io:+"
+	testImplementation "org.apache.httpcomponents:httpclient:+"
+	testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:+"
 }
 
 java {
@@ -42,6 +46,11 @@ jar {
 	manifest {
 		attributes("Main-Class": "org.mtr.core.Main")
 	}
+}
+
+test {
+	useJUnitPlatform()
+	testLogging { showStandardStreams = true }
 }
 
 tasks.register("downloadResources") {
