--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 import org.apache.tools.ant.filters.ReplaceTokens
+import org.mtr.core.Generator
 
 plugins {
 	id "java"
@@ -51,6 +52,10 @@ jar {
 test {
 	useJUnitPlatform()
 	testLogging { showStandardStreams = true }
+}
+
+tasks.register("generateSchemaClasses") {
+	Generator.generate(project.rootDir)
 }
 
 tasks.register("downloadResources") {
