--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -13,3 +13,7 @@ java {
 		languageVersion.set(JavaLanguageVersion.of(8))
 	}
 }
+
+jar {
+	archiveBaseName = "Transport-Simulation-Core-Build-Tools"
+}
