--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,4 +31,4 @@ jobs:
         uses: actions/upload-artifact@main
         with:
           name: JSON Schema Generator
-          path: buildSrc/libs/
+          path: buildSrc/build/libs/
