More data conversion from old save data

--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ test {
 
 tasks.register("setupFiles") {
 	Generator.generate(project, "schema/data", "core/generated/data", true, "core.data", "core.simulation")
+	Generator.generate(project, "schema/legacy", "legacy/generated/data", false, "core.data", "legacy.data")
 	Generator.generate(project, "schema/integration", "core/generated/integration", false, "core.data", "core.integration")
 	Generator.generate(project, "schema/map", "core/generated/map", false, "core.map")
 	Generator.generate(project, "schema/oba", "core/generated/oba", false, "core.oba")
