Use Log4j for logging

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
 	implementation "com.github.jonafanho:Shadow-Libraries:master-SNAPSHOT"
 	implementation "commons-io:commons-io:+"
 	implementation "com.squareup.okhttp3:okhttp:+"
+	implementation "org.apache.logging.log4j:log4j-core:2.+"
 	implementation "org.eclipse.jetty:jetty-server:9.+"
 	implementation "org.eclipse.jetty:jetty-servlet:9.+"
 	implementation "org.eclipse.jetty:jetty-util:9.+"
