--- a/buildSrc/src/main/resources/website/tsconfig.json
+++ b/buildSrc/src/main/resources/website/tsconfig.json
@@ -18,6 +18,7 @@
 		"importHelpers": true,
 		"target": "ES2022",
 		"module": "ES2022",
+		"allowJs": true,
 		"useDefineForClassFields": false,
 		"lib": [
 			"ES2022",
