--- a/buildSrc/src/main/resources/website/tsconfig.json
+++ b/buildSrc/src/main/resources/website/tsconfig.json
@@ -13,6 +13,7 @@
 		"esModuleInterop": true,
 		"sourceMap": true,
 		"declaration": false,
+		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
 		"moduleResolution": "node",
 		"importHelpers": true,
