Restructured Angular files and added components

--- a/buildSrc/src/main/resources/website/angular.json
+++ b/buildSrc/src/main/resources/website/angular.json
@@ -21,6 +21,7 @@
 						],
 						"tsConfig": "tsconfig.app.json",
 						"assets": [
+							"src/assets"
 						],
 						"styles": [
 							"@angular/material/prebuilt-themes/indigo-pink.css",
@@ -80,6 +81,7 @@
 						],
 						"tsConfig": "tsconfig.spec.json",
 						"assets": [
+							"src/assets"
 						],
 						"styles": [
 							"@angular/material/prebuilt-themes/indigo-pink.css",
