--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,14 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@main
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - name: Setup Node packages
+        run: npm ci --prefix buildSrc/src/main/resources/website
+      - name: Build Angular
+        run: npm run build --prefix buildSrc/src/main/resources/website
       - name: Validate gradle wrapper
         uses: gradle/wrapper-validation-action@main
       - name: Setup JDK 17
