--- a/buildSrc/src/main/resources/website/package.json
+++ b/buildSrc/src/main/resources/website/package.json
@@ -20,8 +20,10 @@
 		"@angular/platform-browser": "^17.2.0",
 		"@angular/platform-browser-dynamic": "^17.2.0",
 		"@angular/router": "^17.2.0",
+		"@types/three": "^0.162.0",
 		"class-transformer": "^0.5.1",
 		"rxjs": "~7.8.0",
+		"three": "^0.162.0",
 		"tslib": "^2.3.0",
 		"zone.js": "~0.14.3"
 	},
