Added a legacy rail migration flag and fixed cable car deceleration

--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -17,3 +17,8 @@ java {
 jar {
 	archiveBaseName = "Transport-Simulation-Core-Build-Tools"
 }
+
+tasks.withType(AbstractArchiveTask).configureEach {
+	preserveFileTimestamps = false
+	reproducibleFileOrder = true
+}
