Update Angular and npm libraries

--- a/buildSrc/src/main/resources/website/package.json
+++ b/buildSrc/src/main/resources/website/package.json
@@ -6,31 +6,32 @@
 		"start": "ng serve --host 0.0.0.0",
 		"build": "ng build --base-href a",
 		"watch": "ng build --watch --configuration development",
-		"test": "ng test"
+		"test": "ng test",
+		"update-all": "ng update @angular/core @angular/cli --allow-dirty && ng update @angular/material --allow-dirty && npm update --all --save --force && npm install --force"
 	},
 	"private": true,
 	"dependencies": {
-		"@angular/animations": "^17.3.6",
-		"@angular/cdk": "^17.3.6",
-		"@angular/common": "^17.3.6",
-		"@angular/compiler": "^17.3.6",
-		"@angular/core": "^17.3.6",
-		"@angular/forms": "^17.3.6",
-		"@angular/material": "^17.3.6",
-		"@angular/platform-browser": "^17.3.6",
-		"@angular/platform-browser-dynamic": "^17.3.6",
-		"@angular/router": "^17.3.6",
+		"@angular/animations": "^18.2.0",
+		"@angular/cdk": "^18.2.0",
+		"@angular/common": "^18.2.0",
+		"@angular/compiler": "^18.2.0",
+		"@angular/core": "^18.2.0",
+		"@angular/forms": "^18.2.0",
+		"@angular/material": "^18.2.0",
+		"@angular/platform-browser": "^18.2.0",
+		"@angular/platform-browser-dynamic": "^18.2.0",
+		"@angular/router": "^18.2.0",
 		"@types/three": "^0.163.0",
 		"class-transformer": "^0.5.1",
 		"rxjs": "~7.8.1",
-		"three": "^0.164.0",
+		"three": "^0.164.1",
 		"tslib": "^2.6.2",
-		"zone.js": "~0.14.4"
+		"zone.js": "^0.14.10"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "^17.3.5",
-		"@angular/cli": "^17.3.5",
-		"@angular/compiler-cli": "^17.3.6",
+		"@angular-devkit/build-angular": "^18.2.0",
+		"@angular/cli": "^18.2.0",
+		"@angular/compiler-cli": "^18.2.0",
 		"@types/jasmine": "~5.1.4",
 		"jasmine-core": "~5.1.2",
 		"karma": "~6.4.3",
