--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,9 +21,9 @@ jobs:
         with:
           node-version: 20
       - name: Setup Node packages
-        run: npm ci --prefix buildSrc/src/main/resources/website
+        run: npm ci --prefix website
       - name: Build Angular
-        run: npm run build --prefix buildSrc/src/main/resources/website
+        run: npm run build --prefix website
       - name: Generate schema classes
         run: ./gradlew generateSchemaClasses
       - name: Build
