Update .gitignore and build.gradle to exclude Angular and node_modules directories

--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -21,4 +21,11 @@ jar {
 tasks.withType(AbstractArchiveTask).configureEach {
 	preserveFileTimestamps = false
 	reproducibleFileOrder = true
+	excludes=[
+		"**/website/.angular",
+		"**/website/node_modules",
+		"**/website/src",
+		"**/website/*.*",
+	]
 }
+
