--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -21,11 +21,5 @@ jar {
 tasks.withType(AbstractArchiveTask).configureEach {
 	preserveFileTimestamps = false
 	reproducibleFileOrder = true
-	excludes=[
-		"**/website/.angular",
-		"**/website/node_modules",
-		"**/website/src",
-		"**/website/*.*",
-	]
+	excludes = ["website"]
 }
-
