--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,8 @@ jobs:
           distribution: 'zulu'
       - name: Make gradle wrapper executable
         run: chmod +x ./gradlew
+      - name: Generate TypeScript schema classes
+        run: ./gradlew generateTypeScriptSchemaClasses
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
@@ -24,8 +26,8 @@ jobs:
         run: npm ci --prefix buildSrc/src/main/resources/website
       - name: Build Angular
         run: npm run build --prefix buildSrc/src/main/resources/website
-      - name: Generate schema classes
-        run: ./gradlew generateSchemaClasses
+      - name: Generate Java schema classes
+        run: ./gradlew generateJavaSchemaClasses
       - name: Build
         run: ./gradlew build buildSrc:build
       - name: Run JUnits
