--- a/buildSrc/src/main/resources/website/angular.json
+++ b/buildSrc/src/main/resources/website/angular.json
@@ -24,7 +24,7 @@
 							"src/assets"
 						],
 						"styles": [
-							"@angular/material/prebuilt-themes/azure-blue.css",
+							"src/theme.scss",
 							"src/styles.css"
 						],
 						"scripts": []
@@ -83,7 +83,7 @@
 							"src/assets"
 						],
 						"styles": [
-							"@angular/material/prebuilt-themes/azure-blue.css",
+							"src/theme.scss",
 							"src/styles.css"
 						],
 						"scripts": []
