--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
 	implementation "org.apache.logging.log4j:log4j-core:2.+"
 	compileOnly "com.google.code.findbugs:jsr305:+"
 	testImplementation "org.junit.jupiter:junit-jupiter-api:+"
+	testImplementation "org.junit.platform:junit-platform-launcher:+"
 	testImplementation "org.apache.httpcomponents:httpclient:+"
 	testCompileOnly "com.google.code.findbugs:jsr305:+"
 	testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:+"
