--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ repositories {
 dependencies {
 	implementation "org.mtr:Shadow-Libraries-net:0.0.1"
 	implementation "org.mtr:Shadow-Libraries-util:0.0.1"
+	implementation "com.google.code.gson:gson:+"
+	implementation "it.unimi.dsi:fastutil:+"
 	implementation "commons-io:commons-io:+"
 	implementation "org.apache.logging.log4j:log4j-core:2.+"
 	compileOnly "com.google.code.findbugs:jsr305:+"
