Initial PrimeNG migration

--- a/buildSrc/src/main/resources/website/angular.json
+++ b/buildSrc/src/main/resources/website/angular.json
@@ -24,8 +24,7 @@
 							"src/assets"
 						],
 						"styles": [
-							"src/theme.scss",
-							"src/styles.css"
+							"src/styles.scss"
 						],
 						"scripts": []
 					},
@@ -83,16 +82,27 @@
 							"src/assets"
 						],
 						"styles": [
-							"src/theme.scss",
-							"src/styles.css"
+							"src/styles.scss"
 						],
 						"scripts": []
+					}
+				},
+				"lint": {
+					"builder": "@angular-eslint/builder:lint",
+					"options": {
+						"lintFilePatterns": [
+							"src/**/*.ts",
+							"src/**/*.html"
+						]
 					}
 				}
 			}
 		}
 	},
 	"cli": {
-		"analytics": false
+		"analytics": false,
+		"schematicCollections": [
+			"angular-eslint"
+		]
 	}
 }
