--- a/buildSrc/src/main/resources/website/package.json
+++ b/buildSrc/src/main/resources/website/package.json
@@ -4,40 +4,45 @@
 	"scripts": {
 		"ng": "ng",
 		"start": "ng serve --host 0.0.0.0",
-		"build": "ng build --base-href a",
-		"watch": "ng build --watch --configuration development",
+		"build": "ng lint && ng build --base-href a",
+		"watch": "ng lint && ng build --watch --configuration development",
 		"test": "ng test",
-		"update-all": "ng update @angular/core @angular/cli --allow-dirty && ng update @angular/material --allow-dirty && npm update --all --save --force && npm install --force"
+		"lint": "ng lint",
+		"update-all": "ng update @angular/core @angular/cli --allow-dirty && npm update --all --save --force && npm install --force"
 	},
 	"private": true,
 	"dependencies": {
-		"@angular/animations": "^19.0.4",
-		"@angular/cdk": "^19.0.3",
-		"@angular/common": "^19.0.4",
-		"@angular/compiler": "^19.0.4",
-		"@angular/core": "^19.0.4",
-		"@angular/forms": "^19.0.4",
-		"@angular/material": "^19.0.3",
-		"@angular/platform-browser": "^19.0.4",
-		"@angular/platform-browser-dynamic": "^19.0.4",
-		"@angular/router": "^19.0.4",
+		"@angular/animations": "^19.2.13",
+		"@angular/common": "^19.2.13",
+		"@angular/compiler": "^19.2.13",
+		"@angular/core": "^19.2.13",
+		"@angular/forms": "^19.2.13",
+		"@angular/platform-browser": "^19.2.13",
+		"@angular/platform-browser-dynamic": "^19.2.13",
+		"@angular/router": "^19.2.13",
+		"@jsverse/transloco": "^7.6.1",
+		"@primeng/themes": "^19.1.3",
 		"@types/three": "^0.163.0",
+		"primeicons": "^7.0.0",
+		"primeng": "^19.1.3",
 		"rxjs": "~7.8.1",
 		"three": "^0.164.1",
 		"tslib": "^2.8.0",
-		"zone.js": "^0.15.0"
+		"zone.js": "^0.15.1"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "^19.0.5",
-		"@angular/cli": "^19.0.5",
-		"@angular/compiler-cli": "^19.0.4",
+		"@angular-devkit/build-angular": "^19.2.13",
+		"@angular/cli": "^19.2.13",
+		"@angular/compiler-cli": "^19.2.13",
 		"@types/jasmine": "~5.1.4",
+		"angular-eslint": "19.4.0",
+		"eslint": "^9.26.0",
 		"jasmine-core": "~5.1.2",
 		"karma": "~6.4.3",
 		"karma-chrome-launcher": "~3.2.0",
 		"karma-coverage": "~2.2.1",
 		"karma-jasmine": "~5.1.0",
 		"karma-jasmine-html-reporter": "~2.1.0",
-		"typescript": "~5.6.3"
+		"typescript-eslint": "8.32.0"
 	}
 }
