--- a/buildSrc/src/main/resources/website/package.json
+++ b/buildSrc/src/main/resources/website/package.json
@@ -8,40 +8,40 @@
 		"watch": "ng lint && ng build --watch --configuration development",
 		"test": "ng test",
 		"lint": "ng lint",
-		"update-all": "ng update @angular/core @angular/cli --allow-dirty && npm update --all --save --force && npm install --force"
+		"update-all": "npx npm-check-updates -u && npm install --force"
 	},
 	"private": true,
 	"dependencies": {
-		"@angular/animations": "^19.2.13",
-		"@angular/common": "^19.2.13",
-		"@angular/compiler": "^19.2.13",
-		"@angular/core": "^19.2.13",
-		"@angular/forms": "^19.2.13",
-		"@angular/platform-browser": "^19.2.13",
-		"@angular/platform-browser-dynamic": "^19.2.13",
-		"@angular/router": "^19.2.13",
-		"@jsverse/transloco": "^7.6.1",
-		"@primeng/themes": "^19.1.3",
-		"@types/three": "^0.163.0",
-		"primeng": "^19.1.3",
-		"rxjs": "~7.8.1",
-		"three": "^0.164.1",
-		"tslib": "^2.8.0",
+		"@angular/animations": "^20.3.4",
+		"@angular/common": "^20.3.4",
+		"@angular/compiler": "^20.3.4",
+		"@angular/core": "^20.3.4",
+		"@angular/forms": "^20.3.4",
+		"@angular/platform-browser": "^20.3.4",
+		"@angular/platform-browser-dynamic": "^20.3.4",
+		"@angular/router": "^20.3.4",
+		"@jsverse/transloco": "^8.1.0",
+		"@primeng/themes": "^20.2.0",
+		"@types/three": "^0.180.0",
+		"primeng": "^20.2.0",
+		"rxjs": "~7.8.2",
+		"three": "^0.180.0",
+		"tslib": "^2.8.1",
 		"zone.js": "^0.15.1"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "^19.2.13",
-		"@angular/cli": "^19.2.13",
-		"@angular/compiler-cli": "^19.2.13",
-		"@types/jasmine": "~5.1.4",
-		"angular-eslint": "19.4.0",
-		"eslint": "^9.26.0",
-		"jasmine-core": "~5.1.2",
-		"karma": "~6.4.3",
+		"@angular-devkit/build-angular": "^20.3.5",
+		"@angular/cli": "^20.3.5",
+		"@angular/compiler-cli": "^20.3.4",
+		"@types/jasmine": "~5.1.10",
+		"angular-eslint": "20.4.0",
+		"eslint": "^9.37.0",
+		"jasmine-core": "~5.12.0",
+		"karma": "~6.4.4",
 		"karma-chrome-launcher": "~3.2.0",
 		"karma-coverage": "~2.2.1",
 		"karma-jasmine": "~5.1.0",
 		"karma-jasmine-html-reporter": "~2.1.0",
-		"typescript-eslint": "8.32.0"
+		"typescript-eslint": "8.46.1"
 	}
 }
