Moved website directory

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,6 @@ bin/
 *.DS_Store
 
 generated/
-**/website/.gitignore
-**/website/src/app/entity/generated/
+website/.gitignore
+website/src/app/entity/generated/
 log4j2.properties
