--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,9 +23,9 @@ jobs:
         with:
           node-version: 20
       - name: Setup Node packages
-        run: npm ci --prefix buildSrc/src/main/resources/website
+        run: npm ci --prefix website
       - name: Build Angular
-        run: npm run build --prefix buildSrc/src/main/resources/website
+        run: npm run build --prefix website
       - name: Generate Java schema classes
         run: ./gradlew generateJavaSchemaClasses
       - name: Build
