--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 	implementation "org.mtr:Shadow-Libraries-util:0.0.1"
 	implementation "com.google.code.gson:gson:+"
 	implementation "it.unimi.dsi:fastutil:8.5.15" // Pinning version for Minecraft 1.21.4
-	implementation "commons-io:commons-io:+"
+	implementation "commons-io:commons-io:2.+"
 	implementation "org.apache.logging.log4j:log4j-core:2.24.+"
 	compileOnly "com.google.code.findbugs:jsr305:+"
 	compileOnly "xyz.jpenilla:squaremap-api:+"
