--- a/website/angular.json
+++ b/website/angular.json
@@ -5,28 +5,29 @@
 	"projects": {
 		"website": {
 			"projectType": "application",
-			"schematics": {},
+			"schematics": {
+				"@schematics/angular:component": {
+					"style": "scss"
+				}
+			},
 			"root": "",
 			"sourceRoot": "src",
 			"prefix": "app",
 			"architect": {
 				"build": {
-					"builder": "@angular-devkit/build-angular:application",
+					"builder": "@angular/build:application",
 					"options": {
 						"outputPath": "dist/website",
 						"index": "src/index.html",
 						"browser": "src/main.ts",
-						"polyfills": [
-							"zone.js"
-						],
 						"tsConfig": "tsconfig.app.json",
+						"inlineStyleLanguage": "scss",
 						"assets": [
 							"src/assets"
 						],
 						"styles": [
 							"src/styles.scss"
-						],
-						"scripts": []
+						]
 					},
 					"configurations": {
 						"production": {
@@ -53,7 +54,7 @@
 					"defaultConfiguration": "production"
 				},
 				"serve": {
-					"builder": "@angular-devkit/build-angular:dev-server",
+					"builder": "@angular/build:dev-server",
 					"configurations": {
 						"production": {
 							"buildTarget": "website:build:production"
@@ -71,21 +72,7 @@
 					}
 				},
 				"test": {
-					"builder": "@angular-devkit/build-angular:karma",
-					"options": {
-						"polyfills": [
-							"zone.js",
-							"zone.js/testing"
-						],
-						"tsConfig": "tsconfig.spec.json",
-						"assets": [
-							"src/assets"
-						],
-						"styles": [
-							"src/styles.scss"
-						],
-						"scripts": []
-					}
+					"builder": "@angular/build:unit-test"
 				},
 				"lint": {
 					"builder": "@angular-eslint/builder:lint",
@@ -100,7 +87,7 @@
 		}
 	},
 	"cli": {
-		"analytics": false,
+		"packageManager": "npm",
 		"schematicCollections": [
 			"angular-eslint"
 		]
