--- a/website/package.json
+++ b/website/package.json
@@ -12,36 +12,25 @@
 	},
 	"private": true,
 	"dependencies": {
-		"@angular/animations": "^20.3.4",
-		"@angular/common": "^20.3.4",
-		"@angular/compiler": "^20.3.4",
-		"@angular/core": "^20.3.4",
-		"@angular/forms": "^20.3.4",
-		"@angular/platform-browser": "^20.3.4",
-		"@angular/platform-browser-dynamic": "^20.3.4",
-		"@angular/router": "^20.3.4",
-		"@jsverse/transloco": "^8.1.0",
-		"@primeng/themes": "^20.2.0",
-		"@types/three": "^0.180.0",
-		"primeng": "^20.2.0",
+		"@angular/common": "^21.0.4",
+		"@angular/compiler": "^21.0.4",
+		"@angular/core": "^21.0.4",
+		"@angular/forms": "^21.0.4",
+		"@angular/platform-browser": "^21.0.4",
+		"@jsverse/transloco": "^8.2.0",
+		"@primeng/themes": "^21.0.1",
+		"@types/three": "^0.182.0",
+		"primeng": "^21.0.1",
 		"rxjs": "~7.8.2",
-		"three": "^0.180.0",
-		"tslib": "^2.8.1",
-		"zone.js": "^0.15.1"
+		"three": "^0.182.0",
+		"tslib": "^2.8.1"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "^20.3.5",
-		"@angular/cli": "^20.3.5",
-		"@angular/compiler-cli": "^20.3.4",
-		"@types/jasmine": "~5.1.10",
-		"angular-eslint": "20.4.0",
-		"eslint": "^9.37.0",
-		"jasmine-core": "~5.12.0",
-		"karma": "~6.4.4",
-		"karma-chrome-launcher": "~3.2.0",
-		"karma-coverage": "~2.2.1",
-		"karma-jasmine": "~5.1.0",
-		"karma-jasmine-html-reporter": "~2.1.0",
-		"typescript-eslint": "8.46.1"
+		"@angular/build": "^21.0.3",
+		"@angular/cli": "^21.0.3",
+		"@angular/compiler-cli": "^21.0.4",
+		"angular-eslint": "21.1.0",
+		"eslint": "^9.39.1",
+		"typescript-eslint": "8.49.0"
 	}
 }
